--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="css/magnific-popup.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
   <link href="css/fa/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/print.css">
+  <link rel="stylesheet" type="text/css" href="css/new_print.css">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
